# COMPILER_PASCAL_CPP

./: CMakeLists.txt  CMakeSettings.json  README.md  test.p
src/: GenCode.cpp  GenCode.h  Lexem.cpp  Lexem.h  Lexer.cpp  Syntax.cpp  Syntax.h  Tree.cpp  Tree.h  Variable.h  compiller.cpp  compiller.h  main.cpp
